# msuthemes-py

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  MSUpythemes_roadmap.md  README.md  RELEASE_CHECKLIST.md  build_package.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  sitemap.xml  test_bigten.py  test_fonts.py
.github/workflows/: docs.yml
api/: index.html
api/bigten/: index.html
api/colors/: index.html
api/data/: index.html
api/fonts/: index.html
api/palettes/: index.html
api/themes/: index.html
api/utils/: index.html
development/changelog/: index.html
development/code_of_conduct/: index.html
development/contributing/: index.html
development/license/: index.html
docs/: bigten.rst  changelog.rst  colors.rst  conf.py  contributing.rst  datasets.rst  index.rst  installation.rst  license.rst  migration.rst  palettes.rst  quickstart.rst  themes.rst
docs/api/: bigten.rst  colors.rst  data.rst  fonts.rst  index.rst  palettes.rst  themes.rst  utils.rst
docs/gallery/: index.rst
docs_mkdocs/: index.md
docs_mkdocs/api/: bigten.md  colors.md  data.md  fonts.md  index.md  palettes.md  themes.md  utils.md
docs_mkdocs/development/: changelog.md  code_of_conduct.md  contributing.md  license.md
docs_mkdocs/gallery/: basic.md  bigten.md  index.md  msu.md
docs_mkdocs/getting-started/: installation.md  migration.md  quickstart.md
docs_mkdocs/guide/: bigten.md  colors.md  datasets.md  fonts.md  palettes.md  themes.md
examples/: README.md  advanced_customization.py  basic_usage.py  bigten_comparisons.py  data_visualization.py  palette_showcase.py  seaborn_examples.py
examples/notebooks/: getting_started.ipynb
gallery/: index.html
gallery/basic/: index.html
gallery/bigten/: index.html
gallery/msu/: index.html
getting-started/installation/: index.html
getting-started/migration/: index.html
getting-started/quickstart/: index.html
guide/bigten/: index.html
guide/colors/: index.html
guide/datasets/: index.html
guide/fonts/: index.html
guide/palettes/: index.html
guide/themes/: index.html
javascripts/: extra.js
msuthemes/: __init__.py  bigten.py  colors.py  palettes.py  themes.py  utils.py
scripts/: generate_gallery_images.py
search/: search_index.json
stylesheets/: extra.css
tests/: README.md  __init__.py  conftest.py  test_colors.py  test_data.py  test_imports.py  test_integration.py  test_palettes.py  test_themes.py  test_utils.py
(+5 files in other folders)
