[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msuthemes"
version = "0.2.0"
description = "MSU and Big Ten color palettes and themes for Python data visualization"
authors = [
    {name = "Emilio Xavier Esposito", email = "emilio.esposito@gmail.com"}
]
readme = "README.md"
license = "CC-BY-SA-4.0"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]
keywords = [
    "visualization",
    "matplotlib",
    "seaborn",
    "plotly",
    "color-palettes",
    "themes",
    "michigan-state-university",
    "big-ten",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
seaborn = ["seaborn>=0.12.0"]
plotly = ["plotly>=5.0.0"]
all = [
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mpl>=0.16.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "build>=0.7.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/emilioxavier/msuthemes-py"
Documentation = "https://emilioxavier.github.io/msuthemes-py/"
Repository = "https://github.com/emilioxavier/msuthemes-py"
"Bug Tracker" = "https://github.com/emilioxavier/msuthemes-py/issues"
"Original R Package" = "https://cran.r-project.org/package=MSUthemes"

[tool.setuptools.packages.find]
where = ["."]
include = ["msuthemes*"]

[tool.setuptools.package-data]
msuthemes = [
    "fonts/**/*.ttf",
    "data/*.csv",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=msuthemes --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
